--- a/index.html
+++ b/index.html
@@ -232,22 +232,22 @@
 
         const missions = [
             { type: '말', content: "친구에게 들었던 말 중에 가장 기분 좋았던 말을 발표해 보세요." },
-            { type: '글', content: "학교에서 찾을 수 있는 '좋은 글귀'를 사진 찍고, 왜 좋은지 한 문장으로 적어 제출해주세요." },
+            { type: '글', content: "학교에서 찾을 수 있는 '좋은 글귀'와 관련된 사진을 찍고, 왜 좋은지 한 문장으로 적어 제출해주세요." },
             { type: '맘', content: "'고마워!' 하는 마음을 담은 이모티콘을 그려서 제출해주세요." },
             { type: '말', content: "내가 친구에게 무심코 했던 말 중 후회되는 것이 있다면? 앞으로 어떻게 말할 건지 다짐을 발표해요." },
             { type: '맘', content: "'힘내!'라고 응원하는 표정의 캐릭터를 그려서 제출해주세요." },
-            { type: '글', content: "우리 반 친구의 웃는 모습을 사진 찍고, '웃음은 최고의 행복!' 같은 멋진 표어를 붙여 제출해주세요." },
+            { type: '글', content: "우리 반 친구의 웃는 모습을 사진 찍고, '웃음은 최고의 행복!' 같은 멋진 표어를 적어 제출해주세요." },
             { type: '말', content: "'말글맘 캠페인송' 가사 중 가장 마음에 드는 부분을 골라 그 이유를 설명해 보세요." },
             { type: '글', content: "우리 교실에서 가장 따뜻함이 느껴지는 공간을 사진 찍고, 그 이유를 적어 제출해주세요." },
             { type: '맘', content: "'미안해'라는 마음을 표현하는 이모티콘을 그려서 제출해주세요." },
             { type: '말', content: "친구가 슬퍼 보일 때 어떤 말을 해주면 좋을지 역할극으로 보여주세요." },
-            { type: '글', content: "서로 돕는 친구들의 모습을 사진으로 찍고, '함께하면 더 강해져!' 라는 문구를 넣어 제출해주세요." },
+            { type: '글', content: "서로 돕는 친구들의 모습을 사진으로 찍고, '함께하면 더 강해져!'와 같은 문구를 적어 제출해주세요." },
             { type: '맘', content: "'최고야!'라고 칭찬하는 동작의 캐릭터를 그려 제출해주세요." },
             { type: '말', content: "가족에게 가장 힘이 되었던 말은 무엇이었나요? 경험을 이야기해 봅시다." },
             { type: '맘', content: "'같이 놀자!'고 말하는 표정의 이모티콘을 그려 제출해주세요." },
             { type: '글', content: "활짝 핀 꽃 사진을 찍고, '너의 마음도 활짝'이라는 글을 써서 제출해주세요." },
             { type: '말', content: "인터넷에서 나쁜 말을 봤을 때 어떻게 대처해야 할지 이야기해 보세요." },
-            { type: '글', content: "질서있게 줄을 선 모습을 사진 찍고, '질서는 아름다워'라는 표어를 붙여 제출해주세요." },
+            { type: '글', content: "질서있게 줄을 선 모습을 사진 찍고, '질서는 아름다워'라는 표어와 함께 제출해주세요." },
             { type: '맘', content: "'축하해!' 기뻐하는 마음을 담은 이모티콘을 그려 제출해주세요." },
             { type: '말', content: "칭찬은 왜 중요할까요? 우리 모둠의 생각을 정리해서 발표해 보세요." },
             { type: '글', content: "맑은 하늘 사진을 찍고, '오늘 하루도 맑음!'이라는 글을 써서 제출해주세요." },
